2001-06-10 17:40 UTC-0800 Ron Pinkas <ron@profit-master.com>
  + contrib/dot/pp.prg
    + Restored deleted file.
  + contrib/dot/pp_harb.ch
    + Restored deleted file.

2001-06-10 19:40 GMT -3 Luiz Rafael Culik <culik@sl.conex.net>
   * source/rtl/net.c
     *Added missing include file needed by DJGPP/GNUC

2001-06-10 08:30 GMT -3 Luiz Rafael Culik <culik@sl.conex.net>
   * source/rtl/net.c
     + Support for DJGPP/RSXNT/GNUC compilers
   * doc/funclist.txt
     * Updated some function status

2001-06-10 19:07 GMT+1 Patrick Mast <harbour@PatrickMast.com>
   * contrib/tprepro/tprepro.prg
     * SetIncludePath() method uses __PP_PATH now
     + Added AddIncludePath(cIncludePath) method to TPreProcessor class

2001-06-10 18:35 GMT+3 Alexander Kresin <alex@belacy.belgorod.su>
   * source/pp/pplib.c
     + __PP_PATH( cPath, lClear ) added
       * This function sets path for following #include's and clears existing
         paths if lClear is passed and is TRUE

2001-06-10 15:06 GMT+2 Maurilio Longo <maurilio.longo@libero.it>
   * source/rtl/memoedit.prg
      ! fixed error in handling of text (EOL delimiters handling was wrong)
   * source/rtl/teditor.prg
      ! fixed error in handling of text (EOL delimiters handling was wrong)

2001-06-09 23:15 GMT-3 Horacio Roldan <horacioroldan@usa.net>
   *source/rdd/dbf1.c
     ! fixed message sending that corrupted dbf (with ftp) header

2001-06-09 22:05 GMT+7 Andi Jahja <andijahja@cbn.net.id>
   * harbour/source/compiler/hbusage.c
     - Deleting my own name in "Credit", I do not deserve it!

2001-06-09 09:35 UTC+1 JFL (mafact) <jfl@mafact.com>
   * harbour/source/vm/Classe.c
     * New scoping for rel. 0.37 !

2001-06-07 18:40 UTC-0800 Ron Pinkas <ron@profit-master.com>
   * source/vm/hvm.c
     ! Fixed HB_P_MPOPFIELD was poping assgined value pre-maturely, causing "data type error" from RDD when replacing a field using macro.

2001-06-07 20:39 GMT+1 Patrick Mast <harbour@PatrickMast.com>
   * contrib/tprepro/tprepro.prg